# SimpleNeuralNetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  simpleNN.vssettings
include/: definitions.h
libs/: CMakeLists.txt
libs/idxreader/: CMakeLists.txt
libs/idxreader/include/: BWImage.h  IdxObject.h  idxreader.h
libs/idxreader/libs/: CMakeLists.txt
libs/idxreader/libs/idxreader_core/: CMakeLists.txt
libs/idxreader/libs/idxreader_core/source/: CMakeLists.txt
libs/idxreader/libs/idxreader_core/source/include/: CIdxReader.h  IdxObject.h
libs/idxreader/libs/idxreader_core/source/src/: CIdxReader.cpp  IdxObject.cpp
libs/idxreader/source/: CMakeLists.txt
libs/idxreader/source/include/: IdxObject.h  IdxReader.h  idxReader_exports.h
libs/idxreader/source/src/: IdxObject.cpp  IdxReader.cpp
libs/idxreader/src/: BWImage.cpp  idxreader.cpp
libs/idxreader/test/: CMakeLists.txt
libs/idxreader/test/data/: idxTest.idx  idxTest_2D.idx  idxTest_3D.idx
libs/idxreader/test/src/: idxReader_test.cpp  main.cpp
numberReader/: CMakeLists.txt
numberReader/source/: CMakeLists.txt
numberReader/source/include/: DataPrinter.h  NumberPrinter.h
numberReader/source/src/: DataPrinter.cpp  NumberPrinter.cpp  main.cpp
numberReader/src/: idx_to_test_data.h  main.cpp
simpleNN/: CMakeLists.txt
simpleNN/include/: Connection.h  EvolutionHandler.h  Fitness.h  Layer.h  Network.h  Neuron.h  TestData.h  TestDataPair.h
simpleNN/include/xml/: XmlIO.h
simpleNN/libs/: CMakeLists.txt
simpleNN/libs/simpleNN_core/: CMakeLists.txt
simpleNN/libs/simpleNN_core/include/: CSimpleNN.h  ISimpleNN.h  Layer.h  SimpleNNData.h  SimpleNNFactory.h  SimpleNNWriter.h
simpleNN/libs/simpleNN_core/src/: CSimpleNN.cpp  Layer.cpp  SimpleNNData.cpp  SimpleNNFactory.cpp  SimpleNNWriter.cpp
simpleNN/source/: CMakeLists.txt
simpleNN/source/include/: simpleNN.h  simpleNN_export.h
simpleNN/source/src/: simpleNN.cpp
simpleNN/src/: EvolutionHandler.cpp  EvolutionHandler.h  Layer.cpp  Network.cpp  Neuron.cpp  connection.cpp  random_helper.cpp  random_helper.h
simpleNN/src/network/: Connection.cpp  Layer.cpp  Network.cpp  Neuron.h
simpleNN/src/xml/: XmlIO.cpp  XmlIO.h
simpleNNTrainer/: CMakeLists.txt
simpleNNTrainer/libs/: CMakeLists.txt
simpleNNTrainer/libs/simpleNNTrainer_core/: CMakeLists.txt
simpleNNTrainer/libs/simpleNNTrainer_core/include/: CSimpleNNTrainer.h
simpleNNTrainer/libs/simpleNNTrainer_core/source/: CMakeLists.txt
simpleNNTrainer/libs/simpleNNTrainer_core/source/include/: CSimpleNNTrainer.h  Fitness.h  IFitness.h  ISimpleNNTrainer.h
simpleNNTrainer/libs/simpleNNTrainer_core/source/src/: CSimpleNNTrainer.cpp  Fitness.cpp
simpleNNTrainer/libs/simpleNNTrainer_core/src/: CSimpleNNTrainer.cpp
simpleNNTrainer/libs/simpleNNTrainer_core/test/: CMakeLists.txt  Fitness_test.cpp
simpleNNTrainer/source/: CMakeLists.txt
simpleNNTrainer/source/include/: simpleNNTrainer.h  simpleNNTrainer_export.h
simpleNNTrainer/source/src/: simpleNNTrainer.cpp
src/: CMakeLists.txt
src/factories/: LayerFactory.h  NeuronFactory.h
src/network/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h
test/: CMakeLists.txt  main.cpp  simpleNN_test.cpp
